feat: Add new genre post route
