# swagger.json
@@ -126,6 +126,39 @@
                 }
             }
         },
+        "/genres": {
+            "post": {
+                "tags": ["Genres"],
+                "summary": "Cadastrar um novo gênero",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Genre"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Gênero adicionado com sucesso"
+                    },
+                    "400": {
+                        "description": "O nome do gênero é obrigatório"
+                    },
+                    "404": {
+                        "description": "Gênero não encontrado"
+                    },
+                    "409": {
+                        "description": "Já existe um gênero com esse nome"
+                    },
+                    "500": {
+                        "description": "Erro interno do servidor"
+                    }
+                }
+            }
+        },
         "/genres/{id}": {
             "put": {
                 "tags": ["Genres"],
